internal class AnimatorStrings
{
    internal static string isRunning = "isRunning";
    internal static string isDashing = "isDashing";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "Jump";
    internal static string attack = "Attack";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isPlayerClose = "isPlayerClose";
    internal static string isPatrolling = "isPatrolling";

}
